# wechat-ocr

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile-proto.bat  export_names.cmake
c_sharp/: Program.cs  test_cs.sln
fake/: fake.c  fake.def
include/: mmmojo.h
java/: Test.java  run.bat  run.sh
pb/: ocr_common.proto  ocr_protobuf.proto  ocr_wx3.proto  ocr_wx4.proto  player_protobuf.proto  utility_protobuf.proto
python/: run.bat  test.py
spt/x64/: libprotobuf-lite.lib  mmmojo_64.lib
spt/x86/: libprotobuf-lite.lib  mmmojo.lib
src/: api.cpp  main.cpp  mmmojo.h  mmmojo_funcs.h  mojocall.cpp  mojocall.h  ocr_common.pb.cc  ocr_common.pb.h  ocr_protobuf.pb.cc  ocr_protobuf.pb.h  ocr_wx3.pb.cc  ocr_wx3.pb.h  ocr_wx4.pb.cc  ocr_wx4.pb.h  pyspt.cpp  pyspt.h  wechatocr.cpp  wechatocr.h
vs.proj/: stdafx.cpp  stdafx.h  wcocr.sln  wcocr.vcxproj  wcocr.vcxproj.filters
wcocr-server/: Cargo.toml  test_web_cli.py
wcocr-server/src/: main.rs
